--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <hr>
 
 <h1 style="font-size: 50px; text-align:center;">Our core flavours</h1>
-<img style="width: 33%; " src="image1.jpg">
-<img style="width: 33%; " src="image2.jpg">
-<img style="width: 33%; " src="image3.jpg">
+<img style="width: 33%;height: 350px " src="image1.jpg">
+<img style="width: 33%; height: 350px" src="image2.jpg">
+<img style="width: 33%; height: 350px" src="image3.jpg">
